# finance-application

./: .env  .env.example  .gitignore  LICENSE  README.md  dev.db  divisao_tarefas.txt  main.py  pyproject.toml  seed.py  sql_app.db
alembic/: env.py
alembic/versions/: 0861b4e69856_setup.py  19acc80815f6_init.py  32a2d3f445d3_many_to_many_user_category.py  56c540449212_create_models.py  b235eed5d664_post_upgrade_check.py  f66ff8f863b9_test_env_fix.py
app/: database.py  seed.py
app/database/: database.py
app/models/: __init__.py  account.py  category.py  links.py  transaction.py  user.py
app/routers/: accounts.py  analytics.py  categories.py  transactions.py  users.py
