[project]
name = "finance-application"
version = "0.1.1"
description = "API REST para gerenciamento de despesas pessoais"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",

    "sqlmodel==0.0.27",
    "sqlalchemy==2.0.36",

    "asyncpg==0.30.0",
    "python-dotenv==1.2.1",

    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",

    "alembic==1.17.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
